--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGanesa"
         android:usesCleartextTraffic="true">
-        <activity android:name=".student.HistoryBayarActivity"></activity>
+        <activity android:name=".treasurer.HistoryBayarActivity"></activity>
+        <activity android:name=".student.HistoryBayarActivity" />
         <activity android:name=".student.TopUpActivity" />
         <activity android:name=".treasurer.KonfirmasiTopUpActivity" />
         <activity android:name=".treasurer.TopUpActivity" />
