Set URL ROOT ke server yang udh di hosting

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -38,6 +39,6 @@ dependencies {
 
     // Zxing barcode dependency
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation 'com.karumi:dexter:5.0.0'
-    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.karumi:dexter:6.2.2'
+    implementation 'com.google.zxing:core:3.4.1'
 }
