Revisi Sidang: 1. Di akun wali, di absen anaknya, bisa liat yg kemarin2 (absen 1 bulan) 2. Rekap pembayaran, di akun bendahara (1 bulan) 3. Rekap kehadiran, di akun guru (1 bulan)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGanesa"
         android:usesCleartextTraffic="true">
-        <activity android:name=".guardians.HistoryAbsenActivity"></activity>
+        <activity android:name=".teacher.RekapAbsenActivity"></activity>
+        <activity android:name=".guardians.HistoryAbsenActivity" />
         <activity android:name=".guardians.TampilJadwalActivity" />
         <activity android:name=".guardians.HistoryBayarActivity" />
         <activity android:name=".guardians.ProfileActivity" />
